# draftbot-model

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix  requirements.txt  run_trials.py  setup.py
cpp/: draftbot_generator.cpp
mtgdraftbots/ml/: callbacks.py  draftbots.py  generators.py  hyperbolic.py  losses.py  tqdm_callback.py  train_draftbots.py  tuner.py  utils.py
mtgdraftbots/non_ml/: load_picks.py  parse_to_json.py  remove_unused.py
